--- a/seminars.tex
+++ b/seminars.tex
@@ -1338,3 +1338,33 @@ $$que=\sum_{i=0}^{4} v_i r_i$$
 \[
 	\vec{p}(t)\xrightarrow [t\to\infty]{}\vec{p}(\infty)=\left(\tfrac{1}{10},\,\tfrac{9}{20},\,\tfrac{9}{20}\right).
 \]
+
+Стационарное распределение $\overline r=(r_1,r_2,r_3,\ldots)$
+
+\[
+	\begin{cases}
+		r_1 = -9 r_1 + 2 r_3 \\
+		r_2 = 9 r_1 -2 r_2   \\
+		r_3 = 2 r_2 -2 r_2   \\
+		r_1 + r_2 + r_3 = 1.
+	\end{cases}
+	, \quad
+	\begin{cases}
+		-9r_1 + 2r_3 = 0, \\
+		9r_1 - 2r_2 = 0,  \\
+		2r_2 - 2r_3 = 0,  \\
+		r_1 + r_2 + r_3 = 1.
+	\end{cases}
+\]
+
+\[
+	r_2=r_3=\frac{9}{2}r_1
+	, \quad
+	r_1(1+\frac{9}{2}+\frac{9}{2})=1
+	, \quad
+	r_1=\frac{1}{10}
+\]
+
+\[
+	\vec r = (\frac{1}{10}, \frac{9}{20}, \frac{9}{20})
+\]
