Добавлена Лекция 6: Формулы стационарных вероятностей и граф процесса рождения и гибели

--- a/lectures.tex
+++ b/lectures.tex
@@ -840,3 +840,233 @@ $$
 \[
 	\sum_{k=0}^{n} r_k = 1.
 \]
+
+\subsection{Лекция 6}
+
+Из уравнений для стационарных вероятностей состояний следуют формулы
+\[
+	\lambda_{k-1} r_{k-1} = \mu_k r_k, \quad \text{при } k = 1, 2, \ldots, n.
+\]
+Значит
+\[
+	r_1 = \frac{\lambda_0}{\mu_1} r_0, \quad
+	r_k = \frac{\lambda_{k-1}}{\mu_k} r_{k-1} = \ldots =
+	\frac{\lambda_{k-1} \lambda_{k-2} \cdots \lambda_0}{\mu_k \mu_{k-1} \cdots \mu_1} r_0.
+\]
+
+Из уравнения нормировки получаем
+\[
+	r_0 =
+	\left\{
+	1 +
+	\frac{\lambda_0}{\mu_1} +
+	\frac{\lambda_0 \lambda_1}{\mu_1 \mu_2} +
+	\ldots +
+	\frac{\lambda_0 \lambda_1 \cdots \lambda_{n-1}}{\mu_1 \mu_2 \cdots \mu_n}
+	\right\}^{-1}.
+\]
+
+---
+
+\[
+	\lambda_k r_k = \lambda_{k-1} r_{k-1} - \mu_k r_k + \mu_{k+1} r_{k+1}.
+\]
+
+---
+
+Граф процесса рождения и гибели с бесконечным числом состояний:
+
+\begin{center}
+	\begin{tikzpicture}[
+			>=Stealth, thick,
+			state/.style={draw, rectangle, minimum width=10mm, minimum height=8mm, font=\small, align=center}
+		]
+		% узлы
+		\node[state] (0) at (0,0) {0};
+		\node[state] (1) at (2,0) {1};
+		\node[state] (2) at (4,0) {2};
+		\node[state] (d1) at (6,0) {$\cdots$};
+
+		% стрелки вправо (рождения)
+		\path[->] (0) edge[bend left=20] node[above] {$\lambda_0$} (1);
+		\path[->] (1) edge[bend left=20] node[above] {$\lambda_1$} (2);
+		\path[->] (2) edge[bend left=20] node[above] {$\lambda_2$} (d1);
+
+		% стрелки влево (гибели)
+		\path[->] (1) edge[bend left=20] node[below] {$\mu_1$} (0);
+		\path[->] (2) edge[bend left=20] node[below] {$\mu_2$} (1);
+		\path[->] (d1) edge[bend left=20] node[below] {$\mu_3$} (2);
+	\end{tikzpicture}
+\end{center}
+
+Система дифференциальных уравнений Колмогорова для процесса рождения и гибели
+с бесконечным числом состояний:
+
+\[
+	\begin{cases}
+		p_0'(t) = -\lambda_0 p_0(t) + \mu_1 p_1(t), \\[6pt]
+		p_k'(t) = \lambda_{k-1} p_{k-1}(t)
+		- (\lambda_k + \mu_k) p_k(t)
+		+ \mu_{k+1} p_{k+1}(t), \quad k \ge 1.
+	\end{cases}
+\]
+
+---
+
+Стационарные вероятности состояний $r_0, r_1, r_2, \ldots$ процесса рождения и гибели
+с бесконечным числом состояний удовлетворяют системе линейных алгебраических уравнений:
+\[
+	\begin{cases}
+		0 = -\lambda_0 r_0 + \mu_1 r_1, \\[6pt]
+		0 = \lambda_{k-1} r_{k-1} - (\lambda_k + \mu_k) r_k + \mu_{k+1} r_{k+1}, \quad k \ge 1,
+	\end{cases}
+\]
+а также уравнению нормировки:
+\[
+	\sum_{k=0}^{\infty} r_k = 1.
+\]
+
+---
+
+Из уравнений для стационарных вероятностей состояний следуют формулы
+\[
+	\lambda_{k-1} r_{k-1} = \mu_k r_k, \quad \text{при } k = 1, 2, \ldots, n.
+\]
+Значит
+\[
+	r_1 = \frac{\lambda_0}{\mu_1} r_0, \quad
+	r_k = \frac{\lambda_{k-1}}{\mu_k} r_{k-1}
+	= \ldots =
+	\frac{\lambda_{k-1} \lambda_{k-2} \cdots \lambda_0}{\mu_k \mu_{k-1} \cdots \mu_1} r_0.
+\]
+
+Из уравнения нормировки получаем
+\[
+	r_0 =
+	\left\{
+	1 +
+	\frac{\lambda_0}{\mu_1} +
+	\frac{\lambda_0 \lambda_1}{\mu_1 \mu_2} +
+	\ldots +
+	\frac{\lambda_0 \lambda_1 \cdots \lambda_{n-1}}{\mu_1 \mu_2 \cdots \mu_n}
+	+ \ldots
+	\right\}^{-1},
+	\quad \text{если }
+	\lim_{k \to \infty} \frac{\lambda_{k-1}}{\mu_k} < 1.
+\]
+
+---
+
+\subsubsection*{Пуассоновский поток}
+
+Пуассоновский (простейший) поток событий — поток, удовлетворяющий свойствам:
+
+\begin{enumerate}
+	\item стационарность;
+	\item отсутствие последействия;
+	\item ординарность.
+\end{enumerate}
+
+Для пуассоновского потока событий случайный процесс
+$\{ X(t); \, t \ge 0 \}$
+является марковским и называется процессом Пуассона.
+
+---
+
+\subsubsection*{Поток однородных событий}
+
+\begin{enumerate}
+	\item Случайная последовательность
+	      $t_1 \le t_2 \le \ldots$
+	      — \textit{моменты наступления событий};
+
+	\item
+	      $\{\tau_k = t_k - t_{k-1}; \, k \ge 1\}$,
+	      $(t_0 = 0)$ —
+	      \textit{интервалы между событиями};
+
+	\item
+	      $\{ X(t); \, t \ge 0 \}$ —
+	      \textit{число событий на отрезке} $[0, t]$.
+\end{enumerate}
+
+---
+
+Два потока называются эквивалентными, если у них совпадают
+для любого $n \ge 1$ конечномерные распределения
+$(\tau_1, \ldots, \tau_n) \quad \text{и} \quad (\tau_1', \ldots, \tau_n')$,
+либо для любых $s_1, \ldots, s_n$ конечномерные распределения
+$(X(s_1), \ldots, X(s_n)) \quad \text{и} \quad (X'(s_1), \ldots, X'(s_n))$.
+
+---
+
+\subsubsection*{Рекуррентный поток с запаздыванием}
+
+Рекуррентный поток с запаздыванием, определяемый функциями распределения $F_1(t)$ и $F(t)$:
+
+\begin{enumerate}
+	\item $\{\tau_k; \, k \ge 1\}$ — независимы в совокупности;
+	\item $F(t) = P(\tau_k \le t), \quad k \ge 2$;
+	\item $F_1(t) = P(\tau_1 \le t)$.
+\end{enumerate}
+
+Поток называется рекуррентным потоком, если $F_1(t) = F(t)$.
+
+---
+
+\subsubsection*{Пуассоновский поток с параметром $\lambda$}
+
+Пуассоновский поток с параметром $\lambda$ — рекуррентный поток, и
+
+\[
+	F(t) = P(\tau_k \le t) = 1 - e^{-\lambda t},
+	\quad t \ge 0, \; k \ge 1.
+\]
+
+---
+
+\subsubsection*{Простейший поток}
+
+Поток заявок называется \textbf{стационарным}, если конечномерные распределения
+\[
+	(X(t + s_1), \ldots, X(t + s_n))
+\]
+не зависят от $t$.
+
+Стационарность означает, что вероятность поступления того или иного числа заявок
+на участке времени длины $\tau$ не зависит от его расположения на оси времени,
+а зависит только от его длины.
+
+---
+
+Поток заявок называется потоком с отсутствием последействия, если случайные величины
+\[
+	X(t_1), \; X(t_2) - X(t_1), \; \ldots, \; X(t_n) - X(t_{n-1})
+\]
+независимы в совокупности для любых $t_1 < t_2 < \ldots < t_n$.
+
+Отсутствие последействия означает, что вероятность попадания того или иного числа заявок
+на заданный участок оси времени не зависит от того, сколько заявок пришло
+на любой другой, не пересекающийся с ним участок.
+
+---
+
+Поток заявок называется ординарным, если
+\[
+	P\big(X(s + t) - X(s) > 1\big) = o(t), \quad t \to +0,
+\]
+т.е.
+\[
+	\lim_{t \to +0} \frac{P\big(X(s + t) - X(s) > 1\big)}{t} = 0
+	\quad \text{при всех } s \ge 0.
+\]
+
+Ординарность означает, что заявки поступают по одному,
+а не группами по два, три и т.д.
+
+---
+
+Из стационарности следует:
+
+
+---
